gst/yadif/gstyadif.c
@@ -243,8 +243,8 @@ gst_yadif_transform_caps (GstBaseTransform * trans,
     gst_value_list_append_value (&value, &v);
 
     gst_caps_set_value (othercaps, "interlace-mode", &value);
-    g_value_reset (&value);
-    g_value_reset (&v);
+    g_value_unset (&value);
+    g_value_unset (&v);
   } else {
     gst_caps_set_simple (othercaps, "interlace-mode", G_TYPE_STRING,
         "progressive", NULL);
